# macd-regime-report

./: README.md  pyproject.toml  requirements.txt  run_report.py  signals.txt
src/macd_regime/: __init__.py  cli.py  data_sources.py  engine.py  indicators.py  models.py  parser.py  spx_gate.py  state_store.py
src/pandas/: __init__.py
tests/: test_engine.py  test_parser.py  test_parser_and_state.py
